images fixed size, border and custom scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -164,9 +164,44 @@ footer {
 
 /* LEGO PAGE */
 
+
+
+#inlineSet{
+  border: 3px solid #e93582 !important;
+}
+#inlineSet::-webkit-scrollbar {
+  width: 1rem;
+  height: 1rem;
+  padding: 1rem !important;
+
+
+}
+
+/* Track */
+#inlineSet::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px #f876af; 
+  border-radius: 10px;
+  border: solid 5px transparent;
+
+}
+
+/* Handle */
+#inlineSet::-webkit-scrollbar-thumb {
+  background:#e93582; 
+  border-radius: 10px;
+
+}
+
+/* Handle on hover */
+#inlineSet::-webkit-scrollbar-thumb:hover {
+  background: #f876af; 
+
+}
+
 .minifigInline {
-  max-width: 85%;
-  max-height: 100%;
+  height: 9rem;
+  width: 10rem;
+  padding:1rem;
 }
 
 .boldTitle {
